Updated texts with headings and better storytelling

--- a/public/index.html
+++ b/public/index.html
@@ -21,25 +21,24 @@
     <!--                              WELCOME PAGE                               -->
     <!-- ----------------------------------------------------------------------- -->
     <section id="welcome-page">
+        <section id="welcome-text">
+            <h1>Love is blind</h1>
+            <h2>Limerence is refusing to see</h2>
+            <section class="button" id="begin-section">
+                <a href="#" id="beginButton">Begin</a>
+            </section>
+        </section>
         <section id="intro">
+            <h1>The Spell</h1>
             <p>Sometimes attraction feels like a love spell or a Cupid's arrow that hit the target: sudden, unintended,
-                and
-                impossible to reason with. Limerence, as the intense longing for someone whose feelings we cannot fully
-                know
-                or whose reciprocation we desperately want, can take over our thoughts as if they hold a secret we
-                urgently
-                need. Bad Bunny puts it this way in his song Un Coco:</p>
+                and <b>impossible to reason with</b>. Limerence, as the intense longing for someone whose feelings we
+                cannot
+                fully know, takes over our thoughts as if they hold a secret we urgently need. <br><br>
+                Bad Bunny puts it this way in his song <i>Un Coco</i>:</p>
         </section>
         <section id="uncoco-quote">
+            <!-- I used <blockquote> and <span> to to style the lyrics lines in Spanish and English differently. -->
             <blockquote>
-                <p class="lyrics-line">
-                    <span class="spanish">Antes que este phillie se apague, yo te voy a olvidar</span><br>
-                    <span class="english">(Before this phillie goes out, I'm going to forget you)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Yo te voy a olvidar, yal</span><br>
-                    <span class="english">(I'm going to forget you)</span>
-                </p>
                 <p class="lyrics-line">
                     <span class="spanish">Me paso fumando bajo las palmera'</span><br>
                     <span class="english">(I spend my time smoking under the palm trees)</span>
@@ -77,80 +76,57 @@
                     <span class="spanish">Por favor</span><br>
                     <span class="english">(Please)</span>
                 </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Aunque sea un mes ante' que salga el Sol</span><br>
-                    <span class="english">(Even if it's a month before the sun rises)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Que en la mañana coja alegría buscando tu olor</span><br>
-                    <span class="english">(So that in the morning I get happy looking for your scent)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Tanto' trofeo' y aún me siento perdedor, perdedor</span><br>
-                    <span class="english">(So many trophies and I still feel like a loser, a loser)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Búscame el encendedor, ey</span><br>
-                    <span class="english">(Find me the lighter, hey)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Que si no te olvido, me voy a mudar pa' Chile</span><br>
-                    <span class="english">(If I don't forget you, I'm going to move to Chile)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Pa' Argentina o pa' El Salvador</span><br>
-                    <span class="english">(To Argentina or to El Salvador)</span>
-                </p>
-                <p class="lyrics-line">
-                    <span class="spanish">Pero denme el lighter, dije, por favor, por favor</span><br>
-                    <span class="english">(But give me the lighter, I said, please, please)</span>
-                </p>
             </blockquote>
         </section>
         <section id="analysis-intro">
-            <p>But when you look closely, all of that is happening inside Bad Bunny's (and your) mind. In reality, it is
-                your thoughts and energy that create that emotional momentum, rarely something external, including the
-                object of your longing. As Dorothy Tennov, the psychologist who coined the term limerence, explains,
-                this
-                experience is happening mostly in your head:</p>
+            <h1>The Reality</h1>
+            <p>When you look closely, all of that is happening inside Bad Bunny's (and your) mind. In reality, it is
+                <b>your thoughts and energy</b> creating that emotional momentum, rarely something external (least the
+                object of your longing). <br><br>
+                As Dorothy Tennov, the psychologist who coined the term, explains, this experience is a movie happening
+                entirely in your head:
+            </p>
         </section>
         <section id="tennov-quote">
             <blockquote>
-                <p>Limerence is, above all else, mental activity. It is an interpretation of events, rather than the
-                    events
-                    themselves. You admire, you are physically attracted, you see, or think you see (or deem it possible
-                    to
-                    see under “suitable” conditions), the hint of possible reciprocity, and the process is set in
+                <p>Limerence is, above all else, <b>mental activity.</b> It is an interpretation of events, rather than
+                    the
+                    events themselves. You admire, you are physically attracted, you see, or think you see (or deem it
+                    possible
+                    to see under “suitable” conditions), the hint of possible reciprocity, and the process is set in
                     motion.
                 </p>
             </blockquote>
         </section>
         <section id="conclusion">
+            <h1>The Projection</h1>
             <p>But what if the “beloved” is not a main character, but a supporting role we created to look back at
                 ourselves?<br><br>
-                Some psychologists describe limerence as a projection of our unacknowledged qualities, unmet needs, and
-                internal stories. We don't really see them, but a symbol: an image shaped by unconscious desires,
+                Some sychologists describe limerence as a <b>projection</b> of our unacknowledged qualities, unmet
+                needs, and
+                internal stories. We don't really see <i>them</i>, but a symbol: an image shaped by unconscious desires,
                 attachment patterns, and the idealized narratives we carry. We fall in love with a “missing half” of our
-                own psyche. In limerence, we may actually be in love with our own unrealized potential, reflected
-                through
-                another.</p>
+                own psyche.<br><br>
+                In limerence, we may actually be in love with our own unrealized potential, reflected
+                through another.</p>
         </section>
         <section id="invitation">
-            <h1>An Invitation</h1>
+            <h1>The Invitation</h1>
             <p>Instead of trying to possess the person who awakens this feeling, we can turn the attraction inward and
-                treat
-                it as a message from the parts of us that seek expression.<br>
+                treat it as a message from the parts of us that seek expression.<br>
                 Acknowledging that the hidden aspects of yourself are projecting themselves onto others can serve as a
-                form
-                of self-discovery, creating a space where desire can return to its source: <b>yourself</b></p>
+                form of self-discovery, creating a space where desire can return to its source: <b>yourself</b></p>
         </section>
         <section id="final-prompt">
-            <p>This experience invites you to do that. Think of someone who has stirred longing, admiration, confusion,
-                gratitude, or limerent desire. Not necessarily a lover (it could be a friend, a fleeting crush, a
-                situationship, a mentor, or a stranger who shifted something in you). You'll credit them as if they were
-                part of the film of that chapter of your life. Please write their name, their “role” in your story, a
-                thank-you note (or an f-you one), and a song that serves as the soundtrack for that chapter. If you
-                want, we can keep this information private and redact it <b>(use the hide checkbox)</b>.</p>
+            <h1><b>Put it to rest</b></h1>
+            <p>Think of someone who has stirred longing, admiration, or limerent desire in you. Not necessarily a
+                lover—it could be a friend, a fleeting crush, or a stranger who shifted something in you.<br>
+                You will credit them as if they were part of the <b>film of that chapter of your life</b>. We need:</p>
+            <ul>Their Name</ul>
+            <ul>Their “Role” in your story</ul>
+            <ul>A Soundtrack Song (optional)</ul>
+            <ul>A closing Note (optional)</ul>
+            <p>* To keep this private, <b>you can use the 'hide' checkbox</b></p>
         </section>
         <!-- ----------------- Transition to the end credits scene ----------------- -->
         <section id="button">
@@ -181,7 +157,7 @@
     <!-- ----------------------------------------------------------------------- -->
     <!--                             SUBMISSION FORM                             -->
     <!-- ----------------------------------------------------------------------- -->
-     <!-- I chose to use a footer element for the submission form to semantically indicate its role as a persistent
+    <!-- I chose to use a footer element for the submission form to semantically indicate its role as a persistent
      section at the bottom of the page. -->
     <footer class="endcreditsPage" id="submits">
         <form id="submission-form">
