Story and transitions working. Credits and submits as well. Safari OK!

--- a/public/index.html
+++ b/public/index.html
@@ -17,27 +17,55 @@
 </head>
 
 <body>
-    <!-- ----------------------------------------------------------------------- -->
-    <!--                              WELCOME PAGE                               -->
-    <!-- ----------------------------------------------------------------------- -->
     <section id="welcome-page">
-        <section id="welcome-text">
-            <h1>Love is blind</h1>
-            <h2>Limerence is refusing to see</h2>
-            <section class="button" id="begin-section">
-                <a href="#" id="beginButton">Begin</a>
-            </section>
+        <section id="prefacePt1">
+            <div class="text-wrapper">
+                <h1>There's infatuation, there's attraction, there's love...</h1>
+                <h2>...and then, there's limerence.</h2>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
+            </div>
         </section>
-        <section id="intro">
-            <h1>The Spell</h1>
-            <p>Sometimes attraction feels like a love spell or a Cupid's arrow that hit the target: sudden, unintended,
-                and <b>impossible to reason with</b>. Limerence, as the intense longing for someone whose feelings we
-                cannot
-                fully know, takes over our thoughts as if they hold a secret we urgently need. <br><br>
-                Bad Bunny puts it this way in his song <i>Un Coco</i>:</p>
+
+        <section id="prefacePt2">
+            <div class="text-wrapper">
+                <h1>What it is</h1>
+                <p>Limerence is an intense, involuntary state of romantic infatuation marked by obsessive
+                    longing for another person and a powerful need for reciprocity. This desire appears uninvited; it
+                    feels unintentional, as if someone bewitched you. Think of puppy love that lingers and gets out of
+                    control. Billie Holiday's song <i>You Go To My Head</i> is that feeling in pure form; her
+                    description is
+                    textbook limerence:</p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
+            </div>
         </section>
+
+        <section id="billie-quote">
+            <blockquote>
+                <p class="lyrics-line"><span class="spanish">You go to my head</span></p>
+                <p class="lyrics-line"><span class="spanish">And you linger like a haunting refrain</span></p>
+                <p class="lyrics-line"><span class="spanish">And I find you spinnin' 'round in my brain</span></p>
+                <p class="lyrics-line"><span class="spanish">Like the bubbles in a glass of champagne</span></p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
+            </blockquote>
+        </section>
+
+        <section id="prefacePt3">
+            <div class="text-wrapper">
+                <h1>What it feels like</h1>
+                <p>If you recognize this feeling, know that those deep and intense desires are fundamental to our
+                    nature. It was
+                    true for Billie Holiday in the 30s, it is true for you, and it is true for Bad Bunny today. Just
+                    look at
+                    the lyrics of <i>Un Coco</i>:</p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
+            </div>
+        </section>
+
         <section id="uncoco-quote">
-            <!-- I used <blockquote> and <span> to to style the lyrics lines in Spanish and English differently. -->
             <blockquote>
                 <p class="lyrics-line">
                     <span class="spanish">Me paso fumando bajo las palmera'</span><br>
@@ -76,17 +104,36 @@
                     <span class="spanish">Por favor</span><br>
                     <span class="english">(Please)</span>
                 </p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
             </blockquote>
         </section>
-        <section id="analysis-intro">
-            <h1>The Reality</h1>
-            <p>When you look closely, all of that is happening inside Bad Bunny's (and your) mind. In reality, it is
-                <b>your thoughts and energy</b> creating that emotional momentum, rarely something external (least the
-                object of your longing). <br><br>
-                As Dorothy Tennov, the psychologist who coined the term, explains, this experience is a movie happening
-                entirely in your head:
-            </p>
+
+        <section id="intro">
+            <div class="text-wrapper">
+                <h1>The Spell</h1>
+                <p>As you can see, sometimes attraction feels like Cupid's arrow or a love spell:
+                    sudden, unintended, and <b>impossible to reason with</b>. Limerence, as the intense longing for
+                    someone whose feelings
+                    we cannot fully know, takes over our thoughts as if they hold a secret we urgently need.</p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
+            </div>
         </section>
+
+        <section id="analysis-intro">
+            <div class="text-wrapper">
+                <h1>The Reality</h1>
+                <p>But look closely. That turmoil is happening inside Billie's mind, Bad Bunny's mind, and yours. In
+                    reality, it is <b>your thoughts and energy</b> creating the emotional momentum, rarely the person
+                    themselves.<br><br>
+                    As Dorothy Tennov, the psychologist who coined the term, explains, this experience is a production
+                    staged entirely in your head:</p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
+            </div>
+        </section>
+
         <section id="tennov-quote">
             <blockquote>
                 <p>Limerence is, above all else, <b>mental activity.</b> It is an interpretation of events, rather than
@@ -96,88 +143,120 @@
                     to see under “suitable” conditions), the hint of possible reciprocity, and the process is set in
                     motion.
                 </p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
             </blockquote>
         </section>
+
         <section id="conclusion">
-            <h1>The Projection</h1>
-            <p>But what if the “beloved” is not a main character, but a supporting role we created to look back at
-                ourselves?<br><br>
-                Some sychologists describe limerence as a <b>projection</b> of our unacknowledged qualities, unmet
-                needs, and
-                internal stories. We don't really see <i>them</i>, but a symbol: an image shaped by unconscious desires,
-                attachment patterns, and the idealized narratives we carry. We fall in love with a “missing half” of our
-                own psyche.<br><br>
-                In limerence, we may actually be in love with our own unrealized potential, reflected
-                through another.</p>
+            <div class="text-wrapper">
+                <h1>The Projection</h1>
+                <p>But what if the “beloved” is not the main character, but a supporting role we created to look back at
+                    ourselves?<br><br>
+                    Some sychologists describe limerence as a <b>projection</b> of our unacknowledged qualities, unmet
+                    needs, and
+                    internal stories. We don't really see <i>them</i>, but a symbol: an image shaped by unconscious
+                    desires,
+                    attachment patterns, and the idealized narratives we carry. We fall in love with the “missing half”
+                    of
+                    our
+                    own psyche.<br><br>
+                    In limerence, we may actually be in love with our own unrealized potential, reflected
+                    through another.</p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
+            </div>
         </section>
+
         <section id="invitation">
-            <h1>The Invitation</h1>
-            <p>Instead of trying to possess the person who awakens this feeling, we can turn the attraction inward and
-                treat it as a message from the parts of us that seek expression.<br>
-                Acknowledging that the hidden aspects of yourself are projecting themselves onto others can serve as a
-                form of self-discovery, creating a space where desire can return to its source: <b>yourself</b></p>
+            <div class="text-wrapper">
+                <h1>The Invitation</h1>
+                <p>Instead of trying to possess the person who awakens this feeling, we can turn the attraction inward
+                    and treat it as a message from the parts of us that seek expression.<br><br>
+                    Acknowledging that the hidden aspects of yourself are projecting themselves onto others can serve as
+                    a form of self-discovery, creating a space where desire can return to its source: <b>yourself</b>
+                </p>
+                <p class="down-symbols"><span class="symbol">&#x2193;</span> <span class="symbol">&#x2193;</span> <span
+                        class="symbol">&#x2193;</span></p>
+            </div>
         </section>
-        <section id="final-prompt">
-            <h1><b>Put it to rest</b></h1>
-            <p>Think of someone who has stirred longing, admiration, or limerent desire in you. Not necessarily a
-                lover—it could be a friend, a fleeting crush, or a stranger who shifted something in you.<br>
-                You will credit them as if they were part of the <b>film of that chapter of your life</b>. We need:</p>
-            <ul>Their Name</ul>
-            <ul>Their “Role” in your story</ul>
-            <ul>A Soundtrack Song (optional)</ul>
-            <ul>A closing Note (optional)</ul>
-            <p>* To keep this private, <b>you can use the 'hide' checkbox</b></p>
-        </section>
-        <!-- ----------------- Transition to the end credits scene ----------------- -->
-        <section id="button">
-            <a href="#" id="goButton">Let's Go</a>
+
+        <section id="intermission-button">
+            <a class="button" href="#" id="intButton"><span class="symbol">&#x2192;</span> Let's begin <span
+                    class="symbol">&#x2192;</span></a>
         </section>
     </section>
+
+    <!-- ----------------------------------------------------------------------- -->
+    <!--                              INTERMISSION                               -->
+    <!-- ----------------------------------------------------------------------- -->
+     
+    <section id="final-prompt">
+        <div class="intermission-content">
+            <br>
+            <h1><b>Put it to rest</b></h1>
+            <br>
+            <p>Think of someone who has stirred longing, admiration, or limerent desire in you. Not necessarily a
+                lover—it could be a friend, a fleeting crush, or a stranger who shifted something in you.<br><br>
+                You will credit them as if they were part of the <b>film of that chapter of your life</b>. We need:</p>
+            <br>
+            <ul>
+                <li>Their Name</li>
+                <li>Their "Role" in your story</li>
+                <li>A Soundtrack Song (optional)</li>
+                <li>A closing Note (optional)</li>
+            </ul>
+            <br>
+            <p class="small">* To keep this private, <b>you can use the 'hide' checkbox</b></p>
+
+            <section id="button">
+                <a class="button" href="#" id="goButton"><span class="symbol">&#x2192;</span> I'm ready <span
+                        class="symbol">&#x2192;</span></a>
+            </section>
+        </div>
+    </section>
+
     <!-- ----------------------------------------------------------------------- -->
     <!--                               END CREDITS                               -->
     <!-- ----------------------------------------------------------------------- -->
+
     <section class="endcreditsPage" id="end-credits">
-        <!-- ----------------- CANVAS FOR THE 3D BACKGROUND SCENE ------------------ -->
+
         <section id="background-scene">
             <canvas id="three-bg"></canvas>
         </section>
-        <div class="credits-container">
-            <div class="credits-scroll" id="credits-list">
-                <!-- Credits will be added here using my JS functions -->
-            </div>
-            <div class="credits-scroll" id="songs-list">
-                <!-- Songs will be added here using my JS functions -->
-            </div>
-            <div class="credits-scroll" id="thankyou-list">
-                <!-- Credits will be added here using my JS functions -->
-            </div>
-        </div>
-        </div>
-    </section>
-    <!-- ----------------------------------------------------------------------- -->
-    <!--                             SUBMISSION FORM                             -->
-    <!-- ----------------------------------------------------------------------- -->
-    <!-- I chose to use a footer element for the submission form to semantically indicate its role as a persistent
-     section at the bottom of the page. -->
-    <footer class="endcreditsPage" id="submits">
-        <form id="submission-form">
-            <input type="text" id="name" name="name" placeholder="Name" required>
-            <input type="text" id="role" name="role" placeholder="Role (e.g. The girl next door)" required>
-            <input type="text" id="song" name="song" placeholder="Song - Artist" required>
-            <textarea id="note" name="note" rows="1" placeholder="Your note..." required></textarea>
 
-            <div class="submit-wrapper">
-                <div class="checkbox-wrapper">
-                    <input type="checkbox" id="hide" name="hide">
-                    <label for="hide">Redact</label>
+        <div class="credits-container">
+            <div class="credits-scroll" id="credits-list"></div>
+            <div class="credits-scroll" id="songs-list"></div>
+            <div class="credits-scroll" id="thankyou-list"></div>
+        </div>
+
+        <footer id="submits">
+            <form id="submission-form">
+                <input type="text" id="name" name="name" placeholder="Their name" required>
+                <input type="text" id="role" name="role" placeholder="Their Role" required>
+                <input type="text" id="song" name="song" placeholder="Song - Artist">
+                <textarea id="note" name="note" rows="1" placeholder="A note for them..."></textarea>
+
+                <!-- ------------------------------- SUBMITS ------------------------------- -->
+
+                <div class="submit-wrapper">
+                    <div class="checkbox-wrapper">
+                        <input type="checkbox" id="hide" name="hide">
+                        <label for="hide">Hide</label>
+                    </div>
+                    <button type="submit" id="submit-button">ADD CREDIT</button>
                 </div>
-                <button type="submit" id="submit-button">ADD CREDIT</button>
-            </div>
-        </form>
-    </footer>
+            </form>
+        </footer>
+
+    </section>
+
     <!-- ----------------------------------------------------------------------- -->
     <!--                                 SCRIPTS                                 -->
     <!-- ----------------------------------------------------------------------- -->
+
     <script src="app.js"></script>
     <script type="module" src="/js/three-endcredits.js"></script>
 </body>
