Before final details

--- a/public/index.html
+++ b/public/index.html
@@ -197,7 +197,7 @@
             <h1><b>Put it to rest</b></h1>
             <br>
             <p>Think of someone who has stirred longing, admiration, or limerent desire in you. Not necessarily a
-                lover—it could be a friend, a fleeting crush, or a stranger who shifted something in you.<br><br>
+                lover, it could be a friend, a fleeting crush, or a stranger who shifted something in you.<br><br>
                 You will credit them as if they were part of the <b>film of that chapter of your life</b>. We need:</p>
             <br>
             <ul>
